welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: Missing closing brace `}' assumed here
def faireV {
^PictureMono2:1: error: expected class or object definition
def faireV {
^PictureMono2:27: error: expected start of definition
override def run() {
         ^PictureMono2:32: error: expected class or object definition
def faire3v() {
^